--- a/Gracias.html
+++ b/Gracias.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<div class="fondo-gracias">
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
 	            <nav>
@@ -39,18 +40,17 @@
 </header>
 
 <div class="Gracias"> 
-<div class="container"> 
 <h1> ¡Gracias por registrarte a nuestro newsletter!</h1>
-<button><a href="Index.html">Volver a inicio</a></button> 
+<a href="Index.html">Volver a inicio</a>
 </div>
 </div>
-
+<div class="claqueta"></div>
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
 </footer>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
