--- a/Reparto.html
+++ b/Reparto.html
@@ -5,15 +5,16 @@
 <title>Title of the document</title>
 <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Bootstrap</title>
+         <title>Bootstrap</title>
         <meta name="description" content="">
          <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css?family=Days+One|Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-       <link rel="stylesheet" href="css/estilos.css">
-       <script src= "lightbox-plus-jquery.min.js"></script>
+        <link rel="stylesheet" href="dist/css/lightbox.min.css">
+         <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 
 <body>
@@ -41,42 +42,106 @@
 </header>
 
 
+   
    <section>
-    
-    <div class="fotelis"><h4>J.C Chandor</h4><h5>Director</h5><a href="galeria/jc.jpg" data-lightbox="example-set"><img src="galeria/thumbs/jc.jpg" alt="jc"/></a></div>
-	
-	<div class="fotelis"><h4>Adria Arjona</h4><h5><u>Personaje:</u>Yovanna</h5><a href="galeria/adria.jpg" data-lightbox="example-set"><img src="galeria/thumbs/adria.jpg" alt="adria"/></a></div>
-	
-	<div class="fotelis"><h4>Ben Affleck</h4><h5><u>Personaje:</u> Tom "Redfly" Davis</h5><a href="galeria/benaf.jpg" data-lightbox="example-set"><img src="galeria/thumbs/benaf.jpg" alt="ben"/></a></div>
-	
-	<div class="fotelis"><h4>Charlie Hunman</h4><h5><u>Personaje:</u>William "Ironhead" Miller></h5><a href="dusting.jpg" data-lightbox="example-set"><img src="dusting.jpg" alt="dustin"/></a></div>
-	
-	<div class="fotelis"><h4>Christine Horn</h4><h5><u>Personaje:</u>Retainment Officer<a href="lucas1.jpg" data-lightbox="example-set"><img src="lucas1.jpg" alt="lucas"/></a></div>
-	
-	<div class="fotelis"><h4>Garret Hedlund</h4><h5><u>Personaje:</u>Yovanna</h5><a href="nancy.jpg" data-lightbox="example-set"><img src="nancy.jpg" alt="nancy jonatan steven"/></a></div>
-	
-	<div class="fotelis"><h4>Oscar Isaac</h4><h5><u>Personaje:</u>Yovanna</h5><a href="steve.jpg" data-lightbox="example-set"><img src="steve.jpg"  alt="steve"/></a></div>
-	
-	<div class="fotelis"><h4>Sheila Vand</h4><h5><u>Personaje:</u>Yovanna</h5><a href="jonathan.jpg" data-lightbox="example-set"><img src="jonathan.jpg"  alt="jonathan"/></a></div>
-	
-	<div class="fotelis"><h4>Pedro Pascal</h4><h5><u>Personaje:</u>Yovanna</h5><a href="mom.jpg" data-lightbox="example-set"><img src="mom.jpg"  alt="will's mom"/></a></div>
-
+  <a class="fotelis" href="galeria/adria.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/adria.jpg" alt="adria">
+</a>
+ <h4>Adria Arjona</h4><h5><u>Personaje:</u>Yovanna</h5>
+<a class="fotelis" href="galeria/benaf.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/benaf.jpg" alt="ben">
+</a>
+<h4>Ben Affleck</h4><h5><u>Personaje:</u> Tom "Redfly" Davis</h5>
+<a class="fotelis" href="galeria/charlie.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/charlie.jpg" alt="chsrlie">
+</a>
+<h4>Charlie Hunman</h4><h5><u>Personaje:</u>William "Ironhead" Miller></h5>
+<a class="fotelis" href="galeria/chris.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/chris.jpg" alt="chris">
+</a>
+<h4>Christine Horn</h4><h5><u>Personaje:</u>Retainment Officer></h5>
+<a class="fotelis" href="galeria/garret.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/garret.jpg" alt="garret">
+</a>
+<h4>Garret Hedlund</h4><h5><u>Personaje:</u>Ben Miller<h5>
+<a class="fotelis" href="galeria/isaac.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/isaac.jpg" alt="isaac">
+</a>
+<h4>Oscar Isaac</h4><h5><u>Personaje:</u></h5>
+<a class="fotelis" href="galeria/jc.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/jc.jpg" alt="jc">
+</a>
+<h4>J.C Chandor</h4><h5>Director</h5>
+<a class="fotelis" href="galeria/pedro.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/pedro.jpg" alt="pedro">
+</a>
+<h4>Pedro Pascal</h4><h5><u>Personaje:</u> Francisco "Catfish" Morales</h5>
+<a class="fotelis" href="galeria/sheila.jpg" data-lightbox="gallery">
+  <img class="example-image" src="galeria/thumbs/sheila.jpg" alt="sheila">
+</a>
+<h4>Sheila Vand</h4><h5><u>Personaje:</u>Lauren Yates</h5>	
 	</div>
+	<div class="gente"> 
+	<h3>Guionistas</h3>
+	</div>
+         <div class="pad col-3">
+                <h4>J.C Chandor</h4>
+                <h4>Mark Boal</h4>
+          </div>
+          <div class="gente"> </div>
+          <h3>Productores</h3>
+          </div>
+          <div class="pad col-3">
+                <h4>Charles Roven</h4>
+                <h5>Productor</h5>
+                <h4>Alex Garner</h4>
+                <h5>Productor</h5>
+                <h4>Anna Gerb</h4>
+                <h5>Productor delegado</h5>
+                <h4>Neal Dodson</h4>
+                <h5>Productor delegado</h5>
+                <h4>Kathryn Bigelow</h4>
+                <h5>Productor delegado</h5>
+                <h4>Mark Boal</h4>
+                <h5>Productor delegado</h5>
+          </div>
+          <div class="gente"> </div>
+          <h3>Distribuidora</h3>
+          </div>
+           <div class="pad col-3"> 
+                <h4>Alexis Delage- Toriel</h4>
+                <h5>Encargado de prensa</h5>
+                <h4>Charlie Destombes</h4>
+                <h5>ncargado de prensa</h5>
+           </div>
+           <div class="gente"> 
+           <h3>Empresas que Participaron</h3>
+           </div>
+            <div class=" pad col-3"> 
+                <h4>Atlas Entertainment</h4>
+                <h5>Productora</h5>
+                <h4>Le Public Système Cinéma</h4>
+                <h5>Agencia prensa</h5>
+                <h4>Netflix España</h4>
+                <h5>Distribuidora España</h5>
+           </div>
+           </div>
 	</section>
-	
 
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
 </footer>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link href="estilos.css" rel="stylesheet" type="text/css">
-<link href="lightbox.min.css" rel="stylesheet" type="text/css">
-<link href="lightbox.min.css" rel="stylesheet" type="text/css">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" 
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" 
+        crossorigin="anonymous"></script>
+<script src="dist/js/lightbox.js"></script>
+
 </body>
 
 </html>
