--- a/Sinopsis.html
+++ b/Sinopsis.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 
 <body>
@@ -43,6 +44,7 @@
 	<h1> Sinopsis </h1>
 	<p>Cinco veteranos profesionales de las Fuerzas Especiales se dan cita una zona de América del Sur escasamente poblada en la cual convergen las gronteras de Paraguay, Argentina y Brasil: La Triple Frontera. Por primera vez en sus prestigosas carreras, estos héroes olivados emprenden una peligrosa misión en beneficio de ellos mismos, y no de su país, enfrentando a un poderoso Cartel de la droga y valiéndose del apoyo de un "topo" inflitrado Al principio la operación marcha conforme a lo planificado; pero la codicia y la ambición pueden más que el profesionalismo y repentinamente todo toma un giro inesperado cuando intentan escapar hacia la Cordillera de los Andes. Entonces, es ahí que sus habilidades, sus lealtades y su moral serán empujadas hasta su punto de quiebre en una batalla épica por la supervicencia.</p> 
 </div>
+<div class="rated"><img src="img/rated.png"></div>
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
