--- a/Videos.html
+++ b/Videos.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<div class="fondo-videos"> 
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
 	            <nav>
@@ -41,7 +42,7 @@
 <div class="videos"> 
 <div class="container-fluid"> 
         <div class="row"> 
-            <div class="col-6">
+            <div class="col-12">
             	<iframe width="560" height="315" src="https://www.youtube.com/embed/stLw-2Ob8xQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             	<iframe width="560" height="315" src="https://www.youtube.com/embed/5XoAf4KsxU8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             	<iframe width="560" height="315" src="https://www.youtube.com/embed/FCQXF_MQfE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -60,7 +61,7 @@
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
 </footer>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
