--- a/Reparto.html
+++ b/Reparto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="">
 <head>
 <meta charset="UTF-8">
 <title>Title of the document</title>
@@ -7,12 +7,14 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
          <title>Bootstrap</title>
         <meta name="description" content="">
-         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css?family=Days+One|Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" href="css/estilos.css">
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
 </head>
 
@@ -39,58 +41,104 @@
 	            	</ul>
 	            </nav>	
 </header>
+<div class="slider">
+<div class="container-fluid">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/slider1.jpg" class="d-block w-100" alt="slider1">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider2.jpg" class="d-block w-100" alt="slider2">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider3.jpg" class="d-block w-100" alt="slider3">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider4.jpg" class="d-block w-100" alt="slider4">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider5.jpg" class="d-block w-100" alt="slider5">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
 
+<section>
+<div class="container-fluid">
+        <div class="row">
+                <div class="caja col-4">
+                <img src="galeria/jc.jpg" alt="jc">
+                <h4>J.C Chandor</h4>
+                <h5>Director</h5>
 
-   
-   <section>
-  <a class="fotelis" href="galeria/adria.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/adria.jpg" alt="adria">
-</a>
- <h4>Adria Arjona</h4><h5><u>Personaje:</u>Yovanna</h5>
-<a class="fotelis" href="galeria/benaf.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/benaf.jpg" alt="ben">
-</a>
-<h4>Ben Affleck</h4><h5><u>Personaje:</u> Tom "Redfly" Davis</h5>
-<a class="fotelis" href="galeria/charlie.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/charlie.jpg" alt="chsrlie">
-</a>
-<h4>Charlie Hunman</h4><h5><u>Personaje:</u>William "Ironhead" Miller></h5>
-<a class="fotelis" href="galeria/chris.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/chris.jpg" alt="chris">
-</a>
-<h4>Christine Horn</h4><h5><u>Personaje:</u>Retainment Officer></h5>
-<a class="fotelis" href="galeria/garret.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/garret.jpg" alt="garret">
-</a>
-<h4>Garret Hedlund</h4><h5><u>Personaje:</u>Ben Miller<h5>
-<a class="fotelis" href="galeria/isaac.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/isaac.jpg" alt="isaac">
-</a>
-<h4>Oscar Isaac</h4><h5><u>Personaje:</u></h5>
-<a class="fotelis" href="galeria/jc.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/jc.jpg" alt="jc">
-</a>
-<h4>J.C Chandor</h4><h5>Director</h5>
-<a class="fotelis" href="galeria/pedro.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/pedro.jpg" alt="pedro">
-</a>
-<h4>Pedro Pascal</h4><h5><u>Personaje:</u> Francisco "Catfish" Morales</h5>
-<a class="fotelis" href="galeria/sheila.jpg" data-lightbox="gallery">
-  <img class="example-image" src="galeria/thumbs/sheila.jpg" alt="sheila">
-</a>
-<h4>Sheila Vand</h4><h5><u>Personaje:</u>Lauren Yates</h5>	
+          </div>
+            <div class="caja col-4">
+                <img src="galeria/adria.jpg" alt="adria">
+                <h4>Adria Arjona</h4>
+                <h5><u>Personaje:</u>Yovanna</h5>
+          </div>
+          <div class="caja col-4">
+                <img src="galeria/benaf.jpg" alt="benaf">
+                <h4>Ben Affleck</h4>
+                <h5><u>Personaje:</u> Tom "Redfly" Davis</h5>
+          </div>
+          <div class="caja col-4">
+                <img src="galeria/charlie.jpg" alt="charlie">
+                <h4>Charlie Hunman</h4>
+                <h5><u>Personaje:</u>William "Ironhead" Miller></h5>
+          </div>
+          <div class="caja col-4">
+                <img src="galeria/chris.jpg" alt="chris">
+                <h4>Christine Horn</h4>
+                <h5><u>Personaje:</u>Retainment Officer></h5>
+          </div>
+          <div class="caja col-4">
+                <img src="galeria/garret.jpg" alt="garret">
+                <h4>Garret Hedlund</h4>
+                <h5><u>Personaje:</u>Ben Miller</h5>
+          </div>
+          <div class="caja col-4">
+                <img src="galeria/isaac.jpg" alt="isaac">
+               <h4>Oscar Isaac</h4>
+               <h5><u>Personaje:</u></h5>
+          </div>
+           <div class="caja col-4">
+                <img src="galeria/pedro.jpg" alt="pedro">
+             <h4>Pedro Pascal</h4>
+             <h5><u>Personaje:</u> Francisco "Catfish" Morales</h5>
+          </div>
+           <div class="caja col-4">
+                <img src="galeria/sheila.jpg" alt="sheila">
+                <h4>Sheila Vand</h4>
+                <h5><u>Personaje:</u>Lauren Yates</h5>  
+          </div>
 	</div>
+  </div>
 	<div class="gente"> 
 	<h3>Guionistas</h3>
 	</div>
-         <div class="pad col-3">
+         <div class="pad col-6">
                 <h4>J.C Chandor</h4>
                 <h4>Mark Boal</h4>
           </div>
           <div class="gente"> </div>
           <h3>Productores</h3>
           </div>
-          <div class="pad col-3">
+          <div class="pad col-1">
                 <h4>Charles Roven</h4>
                 <h5>Productor</h5>
                 <h4>Alex Garner</h4>
@@ -111,12 +159,12 @@
                 <h4>Alexis Delage- Toriel</h4>
                 <h5>Encargado de prensa</h5>
                 <h4>Charlie Destombes</h4>
-                <h5>ncargado de prensa</h5>
+                <h5>Encargado de prensa</h5>
            </div>
            <div class="gente"> 
            <h3>Empresas que Participaron</h3>
            </div>
-            <div class=" pad col-3"> 
+            <div class=" pad col-2"> 
                 <h4>Atlas Entertainment</h4>
                 <h5>Productora</h5>
                 <h4>Le Public Système Cinéma</h4>
@@ -133,9 +181,16 @@
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
 </footer>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
 
 
 </body>
