--- a/Contacto.html
+++ b/Contacto.html
@@ -79,7 +79,14 @@
       <p>&nbsp;</p>
         <p>&nbsp;</p>
     </div>
-
+    <div class="animaciones">
+    <div class="claqueta">
+      <img src="img/claqueta.png">
+    </div>
+    <div class="ben">
+      <img src="img/ben.png">
+    </div>
+    </div>
 
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
