--- a/Contacto.html
+++ b/Contacto.html
@@ -80,8 +80,7 @@
         <p>&nbsp;</p>
     </div>
     <div class="animaciones">
-    <div class="claqueta">
-      
+    <div class="camara">
     </div>
     <div class="ben">
       <img src="img/ben.png">
