--- a/Contacto.html
+++ b/Contacto.html
@@ -55,7 +55,7 @@
         </p>
         <p>
           <label for="pais">Pa&iacute;s:</label>
-          <select name="pais" required id="pais">
+          <select name="pais" id="pais">
             <option value="-1" selected>Seleccione su pa&iacute;s</option>
             <option value="ARG">Argentina</option>
             <option value="BRA">Brasil</option>
@@ -80,11 +80,7 @@
         <p>&nbsp;</p>
     </div>
     <div class="animaciones">
-    <div class="camara">
-    </div>
-    <div class="ben">
-      <img src="img/ben.png">
-    </div>
+    <div class="camara"></div>
     </div>
 
 <footer class="container-fluid">
