--- a/Gracias.html
+++ b/Gracias.html
@@ -44,6 +44,11 @@
 <a href="Index.html">Volver a inicio</a>
 </div>
 </div>
+<div class="animacion2">
+<div class="ben">
+      <img src="img/ben.png">
+    </div>
+ </div>
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
