--- a/Sinopsis.html
+++ b/Sinopsis.html
@@ -41,10 +41,15 @@
 </header>
 
 <div class="Sinopsis">
+	<div class="container-fluid">
 	<h1> Sinopsis </h1>
 	<p>Cinco veteranos profesionales de las Fuerzas Especiales se dan cita una zona de América del Sur escasamente poblada en la cual convergen las gronteras de Paraguay, Argentina y Brasil: La Triple Frontera. Por primera vez en sus prestigosas carreras, estos héroes olivados emprenden una peligrosa misión en beneficio de ellos mismos, y no de su país, enfrentando a un poderoso Cartel de la droga y valiéndose del apoyo de un "topo" inflitrado Al principio la operación marcha conforme a lo planificado; pero la codicia y la ambición pueden más que el profesionalismo y repentinamente todo toma un giro inesperado cuando intentan escapar hacia la Cordillera de los Andes. Entonces, es ahí que sus habilidades, sus lealtades y su moral serán empujadas hasta su punto de quiebre en una batalla épica por la supervicencia.</p> 
 </div>
-<div class="rated"><img src="img/rated.png"></div>
+</div>
+<div class="rated">
+	<img src="img/rated.png">
+</div>
+
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
