--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,11 @@
 </head>
 
 <body>
-	<header>
-	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
+
+	<header> 
+        <div class="container">
+		<div class="container-fluid">
+	            <a href="Index.html"><img src="img/header.png" alt="header"/></a> <hr>
 	            <nav>
 	            	<ul>
 	            		<li>
@@ -36,23 +39,34 @@
 	            		</li>
 	            	</ul>
 	            </nav>	
-</header>
+	        </div>
+	    </div>
+	</header>
+
 <div class="fondo-index">
+<div class="container-fluid">
+<div class="container">
+
 <section>
 			<div class="triple"> 
-				<img src="img/triple.jpg" alt="poster-grande"> 
+                <div class="container-fluid">
+				<img src="img/triple.jpg" class="img-fluid" alt="poster-grande"> 
 			</div>
-		<div class="cosas"> 
+			</div>
+		<div class="cosas">
 			<div class="cositas">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/v61sB5Bn8d4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="container-fluid">
+				<iframe width="100%" height="315" src="https://www.youtube.com/embed/v61sB5Bn8d4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 			</div>
 			<div class="cositas">
 				<h3>Cinco veteranos profesionales de las Fuerzas Especiales se dan cita una zona de América del Sur escasamente poblada, la triple frontera entre Paraguay, Argentina y Brasil. Por primera vez en sus prestigosas carreras, estos héroes olivados emprenden una peligrosa misión en beneficio de ellos mismos, y no de su país. Pero cuando todo toma un giro inesperado, sus habilidades, sus lealtades y su moral serán empujadas hasta su punto de quiebre en una batalla épica por la supervicencia. <br><a href="Sinopsis.html">Ver más</a></h3>
-			</div>
 		</div>
-</div>
-</section>
+		</div>
 
+</section>
+</div>
+</div>
 <footer class="container-fluid">
 	<div id="redes">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
@@ -61,6 +75,7 @@
 	</div>
 </footer>
 
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
