correccion de nav - agregado de bootstrap

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
 	            <nav>
 	            	<ul>
 	            		<li>
-	            			<a href="Acercade.html">Acerca de</a>
+	            			<span>Acerca de</span>
 	            			<ul>
 	            				<li>
 	            					<a href="Sinopsis.html">Sinopsis</a> </li>
