--- a/Gracias.html
+++ b/Gracias.html
@@ -22,7 +22,7 @@
 	            <nav>
 	            	<ul>
 	            		<li>
-	            			<a href="Acercade.html">Acerca de</a>
+	            			<span>Acerca de</span>
 	            			<ul>
 	            				<li>
 	            					<a href="Sinopsis.html">Sinopsis</a> </li>
@@ -38,6 +38,9 @@
 	            	</ul>
 	            </nav>	
 </header>
+<div class="fondo-gracias">
+<div class="container-fluid">
+<div class="container">
 
 <div class="Gracias"> 
 <h1> ¡Gracias por registrarte a nuestro newsletter!</h1>
@@ -53,8 +56,9 @@
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
-</footer>
 </div>
+</div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
