--- a/Reparto.html
+++ b/Reparto.html
@@ -25,7 +25,7 @@
 	           <nav>
 	            	<ul>
 	            		<li>
-	            			<a href="Acercade.html">Acerca de</a>
+	            			<span>Acerca de</span>
 	            			<ul>
 	            				<li>
 	            					<a href="Sinopsis.html">Sinopsis</a> </li>
@@ -41,41 +41,10 @@
 	            	</ul>
 	            </nav>	
 </header>
-<div class="slider">
+<div class="fondo-reparto">
 <div class="container-fluid">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/slider1.jpg" class="d-block w-100" alt="slider1">
-    </div>
-    <div class="carousel-item">
-      <img src="img/slider2.jpg" class="d-block w-100" alt="slider2">
-    </div>
-    <div class="carousel-item">
-      <img src="img/slider3.jpg" class="d-block w-100" alt="slider3">
-    </div>
-    <div class="carousel-item">
-      <img src="img/slider4.jpg" class="d-block w-100" alt="slider4">
-    </div>
-    <div class="carousel-item">
-      <img src="img/slider5.jpg" class="d-block w-100" alt="slider5">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
+<div class="container">
+
 
 <section>
 <div class="container-fluid">
@@ -135,10 +104,10 @@
                 <h4>J.C Chandor</h4>
                 <h4>Mark Boal</h4>
           </div>
-          <div class="gente"> </div>
+          <div class="gente"> 
           <h3>Productores</h3>
           </div>
-          <div class="pad col-1">
+          <div class="pad col-12">
                 <h4>Charles Roven</h4>
                 <h5>Productor</h5>
                 <h4>Alex Garner</h4>
@@ -172,15 +141,15 @@
                 <h4>Netflix España</h4>
                 <h5>Distribuidora España</h5>
            </div>
-           </div>
 	</section>
 
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
-</footer>
 </div>
+</div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
