--- a/Sinopsis.html
+++ b/Sinopsis.html
@@ -23,7 +23,7 @@
 	            <nav>
 	            	<ul>
 	            		<li>
-	            			<a href="Acercade.html">Acerca de</a>
+	            			<span>Acerca de</span>
 	            			<ul>
 	            				<li>
 	            					<a href="Sinopsis.html">Sinopsis</a> </li>
@@ -40,6 +40,49 @@
 	            </nav>	
 </header>
 
+<div class="fondo-sinopsis">
+<div class="container-fluid">
+<div class="container">
+<div class="slider">
+
+<div class="container-fluid">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/slider2.jpg" class="d-block w-100" alt="slider2">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider1.jpg" class="d-block w-100" alt="slider1">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider3.jpg" class="d-block w-100" alt="slider3">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider4.jpg" class="d-block w-100" alt="slider4">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider6.jpg" class="d-block w-100" alt="slider6">
+    </div>
+    <div class="carousel-item">
+      <img src="img/slider7.jpg" class="d-block w-100" alt="slider7">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+
 <div class="Sinopsis">
 	<div class="container-fluid">
 	<h1> Sinopsis </h1>
@@ -54,8 +97,9 @@
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
-</footer>
 </div>
+</div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
