--- a/Reparto.html
+++ b/Reparto.html
@@ -23,39 +23,46 @@
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
 	           <nav>
-	            	<ul>
-	            		<li>
-	            			<span>Acerca de</span>
-	            			<ul>
-	            				<li>
-	            					<a href="Sinopsis.html">Sinopsis</a> </li>
-	            					<li><a href="Reparto.html">Reparto</a> </li>
-	            				</li>
-	            			</ul>	
-	            		<li>
-	            			<a href="Videos.html">Videos</a>
-	            		</li>
-	            		<li>
-	            			<a href="Contacto.html">Contacto</a>
-	            		</li>
-	            	</ul>
-	            </nav>	
+                <ul>
+                  <li>
+                    <span>Acerca de</span>
+                    <ul>
+                      <li>
+                        <a href="Sinopsis.html">Sinopsis</a> </li>
+                        <li><a href="Reparto.html">Reparto</a> </li>
+                      </li>
+                    </ul> 
+                  <li>
+                    <a href="Videos.html">Videos</a>
+                  </li>
+                  <li>
+                    <a href="Contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </nav>  
 </header>
 <div class="fondo-reparto">
 <div class="container-fluid">
 <div class="container">
 
+<div class="nombre"></div>
+<div class="container-fluid">
+  <div class="container">
+    <h1 class="titulo">Reparto</h1>
+  </div>
+</div>
 
 <section>
 <div class="container-fluid">
         <div class="row">
-                <div class="caja col-4">
+                <div class="col-4">
                 <img src="galeria/jc.jpg" alt="jc">
                 <h4>J.C Chandor</h4>
                 <h5>Director</h5>
 
           </div>
-            <div class="caja col-4">
+            <div class="row">
+            <div class="col-4">
                 <img src="galeria/adria.jpg" alt="adria">
                 <h4>Adria Arjona</h4>
                 <h5><u>Personaje:</u>Yovanna</h5>
@@ -97,49 +104,51 @@
           </div>
 	</div>
   </div>
-	<div class="gente"> 
+
+	
+  <div class="gente"> 
 	<h3>Guionistas</h3>
 	</div>
-         <div class="pad col-6">
-                <h4>J.C Chandor</h4>
-                <h4>Mark Boal</h4>
+         <div class="pad col-12">
+                <h4 class="white">J.C Chandor</h4>
+                <h4 class="white">Mark Boal</h4>
           </div>
           <div class="gente"> 
           <h3>Productores</h3>
           </div>
           <div class="pad col-12">
-                <h4>Charles Roven</h4>
-                <h5>Productor</h5>
-                <h4>Alex Garner</h4>
-                <h5>Productor</h5>
-                <h4>Anna Gerb</h4>
-                <h5>Productor delegado</h5>
-                <h4>Neal Dodson</h4>
-                <h5>Productor delegado</h5>
-                <h4>Kathryn Bigelow</h4>
-                <h5>Productor delegado</h5>
-                <h4>Mark Boal</h4>
-                <h5>Productor delegado</h5>
+                <h4 class="white">Charles Roven</h4>
+                <h5 class="white">Productor</h5>
+                <h4 class="white">Alex Garner</h4>
+                <h5 class="white">Productor</h5>
+                <h4 class="white">Anna Gerb</h4>
+                <h5 class="white">Productor delegado</h5>
+                <h4 class="white">Neal Dodson</h4>
+                <h5 class="white">Productor delegado</h5>
+                <h4 class="white">Kathryn Bigelow</h4>
+                <h5 class="white">Productor delegado</h5>
+                <h4 class="white">Mark Boal</h4>
+                <h5 class="white">Productor delegado</h5>
           </div>
           <div class="gente"> </div>
           <h3>Distribuidora</h3>
           </div>
-           <div class="pad col-3"> 
-                <h4>Alexis Delage- Toriel</h4>
-                <h5>Encargado de prensa</h5>
-                <h4>Charlie Destombes</h4>
-                <h5>Encargado de prensa</h5>
+           <div class="pad col-12"> 
+                <h4 class="white">Alexis Delage- Toriel</h4>
+                <h5 class="white">Encargado de prensa</h5>
+                <h4 class="white">Charlie Destombes</h4>
+                <h5 class="white">Encargado de prensa</h5>
            </div>
            <div class="gente"> 
            <h3>Empresas que Participaron</h3>
            </div>
-            <div class=" pad col-2"> 
-                <h4>Atlas Entertainment</h4>
-                <h5>Productora</h5>
-                <h4>Le Public Système Cinéma</h4>
-                <h5>Agencia prensa</h5>
-                <h4>Netflix España</h4>
-                <h5>Distribuidora España</h5>
+            <div class=" pad col-12"> 
+                <h4 class="white">Atlas Entertainment</h4>
+                <h5 class="white">Productora</h5>
+                <h4 class="white">Le Public Système Cinéma</h4>
+                <h5 class="white">Agencia prensa</h5>
+                <h4 class="white">Netflix España</h4>
+                <h5 class="white">Distribuidora España</h5>
            </div>
 	</section>
 
