--- a/Sinopsis.html
+++ b/Sinopsis.html
@@ -16,8 +16,7 @@
 
 </head>
 
-<body>
-	<div class="fondo-sinopsis"> 
+<body class="fondo-sinopsis">
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
 	            <nav>
@@ -40,7 +39,6 @@
 	            </nav>	
 </header>
 
-<div class="fondo-sinopsis">
 <div class="container-fluid">
 <div class="container">
 <div class="slider">
@@ -89,6 +87,11 @@
 	<p>Cinco veteranos profesionales de las Fuerzas Especiales se dan cita una zona de América del Sur escasamente poblada en la cual convergen las gronteras de Paraguay, Argentina y Brasil: La Triple Frontera. Por primera vez en sus prestigosas carreras, estos héroes olivados emprenden una peligrosa misión en beneficio de ellos mismos, y no de su país, enfrentando a un poderoso Cartel de la droga y valiéndose del apoyo de un "topo" inflitrado Al principio la operación marcha conforme a lo planificado; pero la codicia y la ambición pueden más que el profesionalismo y repentinamente todo toma un giro inesperado cuando intentan escapar hacia la Cordillera de los Andes. Entonces, es ahí que sus habilidades, sus lealtades y su moral serán empujadas hasta su punto de quiebre en una batalla épica por la supervicencia.</p> 
 </div>
 </div>
+
+</div>
+</div>
+</div>
+
 <div class="rated">
 	<img src="img/rated.png">
 </div>
@@ -97,9 +100,8 @@
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
-</div>
-</div>
 </footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
