--- a/Contacto.html
+++ b/Contacto.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+<div class="fondo-contacto">
+<div class="container-fluid">
+<div class="container">
+</div></div>
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
 	            <nav>
@@ -37,12 +41,20 @@
 	            	</ul>
 	            </nav>	
 </header>
-<div class="fondo-contacto">
+
+
+
+
+	
+<div class="nombre">
 <div class="container-fluid">
-<div class="container">
+  <div class="container">
+    <h1 class="titulo">Contacto</h1>
+  </div>
+</div>
+</div>
 
-
-	<form id="form1" name="form1" method="get" action="gracias.html">
+  <form id="form1" name="form1" method="get" action="gracias.html">
       <fieldset>
         <p>
           <label for="nombre">Nombre y Apellido:</label>
@@ -50,9 +62,9 @@
         </p>
         <p><label for="email">Email:</label>
         <input type="email" required name="email" id="email">
-		<p><label for="password">Contraseña:</label>
+    <p><label for="password">Contraseña:</label>
           <input type="password" required name="password" minlength="8"
-		id="password"/>
+    id="password"/>
         </p>
         <p>
           <label for="pais">Pa&iacute;s:</label>
@@ -70,27 +82,26 @@
           </select>
         </p>
         <p></p>
-		 <p><label for="comentarios">Comentarios:</label>
+     <p><label for="comentarios">Comentarios:</label>
           <textarea name="comentarios" id="comentarios"></textarea>
         </p>
         <label><input type="submit"   value="Registrarse" > </label>
-		 <p>&nbsp;</p>
+     <p>&nbsp;</p>
         </fieldset>
       </form>
-      <p>&nbsp;</p>
-        <p>&nbsp;</p>
-    </div>
+    
     <div class="animaciones">
     <div class="camara"></div>
     </div>
+  </div>
+</div>
 
-</div>
-</div>
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
 </footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
