--- a/Gracias.html
+++ b/Gracias.html
@@ -19,7 +19,7 @@
 <div class="fondo-gracias">
 <header>
 	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
-	            <nav>
+	       <nav>
 	            	<ul>
 	            		<li>
 	            			<span>Acerca de</span>
@@ -37,7 +37,6 @@
 	            		</li>
 	            	</ul>
 	            </nav>	
-</header>
 <div class="fondo-gracias">
 <div class="container-fluid">
 <div class="container">
@@ -46,13 +45,15 @@
 <h1> ¡Gracias por registrarte a nuestro newsletter!</h1>
 <a href="Index.html">Volver a inicio</a>
 </div>
+
 </div>
 <div class="animacion2">
 <div class="ben">
       <img src="img/ben.png">
     </div>
  </div>
-<footer class="container-fluid">
+
+<footer class=" stay container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
 	<a href="https://twitter.com/triplefrontier?lang=en" target="_blank"><img src="img/twitter.png" alt="twitter"/></a>
 	<a href="https://www.instagram.com/triplefrontier/?hl=en"target="_blank"><img src="img/instagram.png" alt="instagram"/></a>
