--- a/Videos.html
+++ b/Videos.html
@@ -38,9 +38,12 @@
 	            	</ul>
 	            </nav>	
 </header>
-<div class="fondo-videos">
+
+<div class="nombre"></div>
 <div class="container-fluid">
-<div class="container">
+  <div class="container">
+    <h1 class="titulo">Videos</h1>
+  </div>
 
 <div class="videos"> 
 <div class="container-fluid"> 
