--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body>
-
+<body class="fondo-index">
 	<header> 
         <div class="container">
 		<div class="container-fluid">
@@ -43,7 +42,7 @@
 	    </div>
 	</header>
 
-<div class="fondo-index">
+
 <div class="container-fluid">
 <div class="container">
 
@@ -55,7 +54,7 @@
 			</div>
 		<div class="cosas">
 			<div class="cositas">
-				<div class="container-fluid">
+				<div class="container">
 				<iframe width="100%" height="315" src="https://www.youtube.com/embed/v61sB5Bn8d4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			</div>
