--- a/gracias.html
+++ b/gracias.html
@@ -18,7 +18,7 @@
 <body>
 <div class="fondo-gracias">
 <header>
-	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
+	            <a href="index.html"><img src="img/header.png" alt="header"/></a>
 	       <nav>
 	            	<ul>
 	            		<li>
