--- a/Contacto.html
+++ b/Contacto.html
@@ -21,7 +21,7 @@
 <div class="container">
 </div></div>
 <header>
-	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
+	            <a href="index.html"><img src="img/header.png" alt="header"/></a>
 	            <nav>
 	            	<ul>
 	            		<li>
@@ -54,7 +54,7 @@
 </div>
 </div>
 
-  <form id="form1" name="form1" method="get" action="gracias.html">
+  <form id="form1" name="form1" method="get" action="Gracias.html">
       <fieldset>
         <p>
           <label for="nombre">Nombre y Apellido:</label>
