--- a/Reparto.html
+++ b/Reparto.html
@@ -21,7 +21,7 @@
 <body>
 	<div class="fondo-reparto">
 <header>
-	            <a href="Index.html"><img src="img/header.png" alt="header"/></a>
+	            <a href="index.html"><img src="img/header.png" alt="header"/></a>
 	           <nav>
                 <ul>
                   <li>
