--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header> 
         <div class="container">
 		<div class="container-fluid">
-	            <a href="Index.html"><img src="img/header.png" alt="header"/></a> <hr>
+	            <a href="index.html"><img src="img/header.png" alt="header"/></a> <hr>
 	            <nav>
 	            	<ul>
 	            		<li>
