--- a/Contacto.html
+++ b/Contacto.html
@@ -54,7 +54,7 @@
 </div>
 </div>
 
-  <form id="form1" name="form1" method="post" action="gracias.html">
+  <form id="form1" name="form1" method="get" action="gracias.html">
       <fieldset>
         <p>
           <label for="nombre">Nombre y Apellido:</label>
