--- a/gracias.html
+++ b/gracias.html
@@ -43,7 +43,7 @@
 
 <div class="Gracias"> 
 <h1> ¡Gracias por registrarte a nuestro newsletter!</h1>
-<a href="Index.html">Volver a inicio</a>
+<a href="index.html">Volver a inicio</a>
 </div>
 
 </div>
