--- a/Reparto.html
+++ b/Reparto.html
@@ -130,8 +130,9 @@
                 <h4 class="white">Mark Boal</h4>
                 <h5 class="white">Productor delegado</h5>
           </div>
-          <div class="gente"> </div>
+          <div class="gente"> 
           <h3>Distribuidora</h3>
+          </div>
           </div>
            <div class="pad col-12"> 
                 <h4 class="white">Alexis Delage- Toriel</h4>
