--- a/Reparto.html
+++ b/Reparto.html
@@ -104,58 +104,53 @@
           </div>
 	</div>
   </div>
-
+</div>  
 	
   <div class="gente"> 
 	<h3>Guionistas</h3>
-	</div>
-         <div class="pad col-12">
-                <h4 class="white">J.C Chandor</h4>
-                <h4 class="white">Mark Boal</h4>
-          </div>
-          <div class="gente"> 
-          <h3>Productores</h3>
-          </div>
-          <div class="pad col-12">
-                <h4 class="white">Charles Roven</h4>
-                <h5 class="white">Productor</h5>
-                <h4 class="white">Alex Garner</h4>
-                <h5 class="white">Productor</h5>
-                <h4 class="white">Anna Gerb</h4>
-                <h5 class="white">Productor delegado</h5>
-                <h4 class="white">Neal Dodson</h4>
-                <h5 class="white">Productor delegado</h5>
-                <h4 class="white">Kathryn Bigelow</h4>
-                <h5 class="white">Productor delegado</h5>
-                <h4 class="white">Mark Boal</h4>
-                <h5 class="white">Productor delegado</h5>
-          </div>
-          <div class="gente"> 
-          <h3>Distribuidora</h3>
-<<<<<<< HEAD
-          </div>
-=======
-        </div>  
-	</div>
->>>>>>> a9b2ae9b0171ab866161dc7ac2927711a08dc598
-           <div class="pad col-12"> 
-                <h4 class="white">Alexis Delage- Toriel</h4>
-                <h5 class="white">Encargado de prensa</h5>
-                <h4 class="white">Charlie Destombes</h4>
-                <h5 class="white">Encargado de prensa</h5>
-           </div>
-           <div class="gente"> 
-           <h3>Empresas que Participaron</h3>
-           </div>
-            <div class=" pad col-12"> 
-                <h4 class="white">Atlas Entertainment</h4>
-                <h5 class="white">Productora</h5>
-                <h4 class="white">Le Public Système Cinéma</h4>
-                <h5 class="white">Agencia prensa</h5>
-                <h4 class="white">Netflix España</h4>
-                <h5 class="white">Distribuidora España</h5>
-           </div>
-	</section>
+</div>
+  <div class="pad col-12">
+    <h4 class="white">J.C Chandor</h4>
+    <h4 class="white">Mark Boal</h4>
+  </div>
+  <div class="gente"> 
+    <h3>Productores</h3>
+  </div>
+  <div class="pad col-12">
+    <h4 class="white">Charles Roven</h4>
+    <h5 class="white">Productor</h5>
+    <h4 class="white">Alex Garner</h4>
+    <h5 class="white">Productor</h5>
+    <h4 class="white">Anna Gerb</h4>
+    <h5 class="white">Productor delegado</h5>
+    <h4 class="white">Neal Dodson</h4>
+    <h5 class="white">Productor delegado</h5>
+    <h4 class="white">Kathryn Bigelow</h4>
+    <h5 class="white">Productor delegado</h5>
+    <h4 class="white">Mark Boal</h4>
+    <h5 class="white">Productor delegado</h5>
+  </div>
+  <div class="gente"> 
+    <h3>Distribuidora</h3>
+  </div>
+  <div class="pad col-12">
+    <h4 class="white">Alexis Delage- Toriel</h4>
+    <h5 class="white">Encargado de prensa</h5>
+    <h4 class="white">Charlie Destombes</h4>
+    <h5 class="white">Encargado de prensa</h5>
+  </div>
+  <div class="gente"> 
+  <h3>Empresas que participaron</h3>
+</div>
+  <div class="pad col-12">
+    <h4 class="white">Atlas Entertainment</h4>
+    <h5 class="white">Productora</h5>
+    <h4 class="white">Le Public Système Cinéma</h4>
+    <h5 class="white">Agencia prensa</h5>
+    <h4 class="white">Netflix España</h4>
+    <h5 class="white">Distribuidora España</h5>
+  </div>
+</section>
 
 <footer class="container-fluid">
 	<a href="https://www.facebook.com/triplefrontier/" target="_blank"><img src="img/facebook.png" alt="facebook"/></a>
