--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 		<div class="cosas">
 			<div class="cositas">
-				<div class="container">
+				<div class="container-fluid">
 				<iframe width="100%" height="315" src="https://www.youtube.com/embed/v61sB5Bn8d4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			</div>
