--- a/Reparto.html
+++ b/Reparto.html
@@ -57,50 +57,50 @@
         <div class="row">
                 <div class="col-4">
                 <img src="galeria/jc.jpg" alt="jc">
-                <h4>J.C Chandor</h4>
-                <h5>Director</h5>
+                <h4 class="white2">J.C Chandor</h4>
+                <h5 class="white2">Director</h5>
 
           </div>
             <div class="row">
             <div class="col-4">
                 <img src="galeria/adria.jpg" alt="adria">
-                <h4>Adria Arjona</h4>
-                <h5><u>Personaje:</u>Yovanna</h5>
+                <h4 class="white2">Adria Arjona</h4>
+                <h5 class="white2"><u>Personaje:</u>Yovanna</h5>
           </div>
           <div class="caja col-4">
                 <img src="galeria/benaf.jpg" alt="benaf">
-                <h4>Ben Affleck</h4>
-                <h5><u>Personaje:</u> Tom "Redfly" Davis</h5>
+                <h4 class="white2">Ben Affleck</h4>
+                <h5 class="white2"><u>Personaje:</u> Tom "Redfly" Davis</h5>
           </div>
           <div class="caja col-4">
                 <img src="galeria/charlie.jpg" alt="charlie">
-                <h4>Charlie Hunman</h4>
-                <h5><u>Personaje:</u>William "Ironhead" Miller></h5>
+                <h4 class="white2">Charlie Hunman</h4>
+                <h5 class="white2"><u>Personaje:</u>William "Ironhead" Miller></h5>
           </div>
           <div class="caja col-4">
                 <img src="galeria/chris.jpg" alt="chris">
-                <h4>Christine Horn</h4>
-                <h5><u>Personaje:</u>Retainment Officer></h5>
+                <h4 class="white2">Christine Horn</h4>
+                <h5 class="white2"><u>Personaje:</u>Retainment Officer></h5>
           </div>
           <div class="caja col-4">
                 <img src="galeria/garret.jpg" alt="garret">
-                <h4>Garret Hedlund</h4>
-                <h5><u>Personaje:</u>Ben Miller</h5>
+                <h4 class="white2">Garret Hedlund</h4>
+                <h5 class="white2"><u>Personaje:</u>Ben Miller</h5>
           </div>
           <div class="caja col-4">
                 <img src="galeria/isaac.jpg" alt="isaac">
-               <h4>Oscar Isaac</h4>
-               <h5><u>Personaje:</u></h5>
+               <h4 class="white2">Oscar Isaac</h4>
+               <h5 class="white2"><u>Personaje:</u></h5>
           </div>
            <div class="caja col-4">
                 <img src="galeria/pedro.jpg" alt="pedro">
-             <h4>Pedro Pascal</h4>
-             <h5><u>Personaje:</u> Francisco "Catfish" Morales</h5>
+             <h4 class="white2">Pedro Pascal</h4>
+             <h5 class="white2"><u>Personaje:</u> Francisco "Catfish" Morales</h5>
           </div>
            <div class="caja col-4">
                 <img src="galeria/sheila.jpg" alt="sheila">
-                <h4>Sheila Vand</h4>
-                <h5><u>Personaje:</u>Lauren Yates</h5>  
+                <h4 class="white2">Sheila Vand</h4>
+                <h5 class="white2"><u>Personaje:</u>Lauren Yates</h5>  
           </div>
 	</div>
   </div>
